--- a/style.css
+++ b/style.css
@@ -72,21 +72,46 @@ canvas {
 }
 
 #restartButton {
-    margin-top: 10px;
-    margin-left: 115px;
-    padding: 5px 10px;
-    font-style: 16px;
-    background-color: #333;
-    color: #fff;
-    border: none;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: normal;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    font-size: 15px;
+    background-color: #ebac4d;
+    color: #fff;
+    border: 1px solid #000000;
+    border-radius: 1px;
     cursor: pointer;
+    text-align: center;
+    width: 150px;
+    height: 30px;
+    z-index: 10;
 }
 
-#restartutton:hover{
-    background-color: #999696;
+#restartButton:hover {
+    background-color: #dfc595;
 }
 
 #canvas {
     border: 1px solid black;
+}
+
+#score {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    position: absolute;
+    top: 350px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
 }
